crates/strider-analyze/tests/snapshots/v3__arm_be__builtins__main.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x100d8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "4" [label="const 0xdeadbeef:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" -> "1" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "8" -> "1" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "8" [label="const 0xdeadbeef:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "9" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "9" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "10" -> "9" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "11" -> "9" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "11" [label="const 0x10130:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "12" -> "9" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0x10000:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v13" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v13" [color="#888888", style=dashed];
  "v13" -> "9" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v14" [label="Post Call\nr2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v14" [color="#888888", style=dashed];
  "v14" -> "9" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v15" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v15" [color="#888888", style=dashed];
  "v15" -> "9" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "16" -> "9" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0x10000:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "9" -> "17" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "18" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "19" -> "17" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x10148:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "20" -> "17" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "21" -> "17" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v22" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "9" -> "v22" [color="#888888", style=dashed];
  "v22" -> "17" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v23" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "9" -> "v23" [color="#888888", style=dashed];
  "v23" -> "17" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "21" -> "17" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "24" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "17" -> "24" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "25" -> "24" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "26" -> "24" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0x1016c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "27" -> "24" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "28" -> "24" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0xcafebabe:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v29" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "17" -> "v29" [color="#888888", style=dashed];
  "v29" -> "24" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v30" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "17" -> "v30" [color="#888888", style=dashed];
  "v30" -> "24" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "31" -> "24" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "32" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "24" -> "32" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "33" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "34" -> "32" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0x101f8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "35" -> "32" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "36" -> "32" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "37" -> "32" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v38" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "24" -> "v38" [color="#888888", style=dashed];
  "v38" -> "32" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "37" -> "32" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "39" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "32" -> "39" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "40" -> "39" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "41" -> "39" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "41" [label="const 0x10228:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "42" -> "39" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "42" [label="const 0x32:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v43" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "32" -> "v43" [color="#888888", style=dashed];
  "v43" -> "39" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "v44" [label="Post Call\nr2", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "32" -> "v44" [color="#888888", style=dashed];
  "v44" -> "39" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "v45" [label="Post Call\nr3", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "32" -> "v45" [color="#888888", style=dashed];
  "v45" -> "39" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "46" -> "39" [color="#ff8800", label=arg4, fontcolor="#cccccc", fontsize=9];
  "47" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "39" -> "47" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "48" -> "47" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "49" -> "47" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "v50" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "39" -> "v50" [color="#888888", style=dashed];
  "v50" -> "47" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "v51" [label="Post Call\nd0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "39" -> "v51" [color="#888888", style=dashed];
  "v51" -> "47" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "v52" [label="Post Call\nd1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "39" -> "v52" [color="#888888", style=dashed];
  "v52" -> "47" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "49" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "53" -> "49" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v50" -> "49" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "53" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "54" -> "53" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "55" -> "53" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "55" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "56" -> "55" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "57" -> "55" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="const 0xfffffff4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "56" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "54" [label="MemPartition[MemPartitionId(4)]", shape=trapezium, fillcolor="#3a1a4a"];
  "39" -> "54" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "48" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "58" -> "48" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "58" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "54" -> "58" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v59" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v59" -> "58" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "49" -> "58" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "46" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "60" -> "46" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v43" -> "46" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "60" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "61" -> "60" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "55" -> "60" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "61" [label="MemPartition[MemPartitionId(3)]", shape=trapezium, fillcolor="#3a1a4a"];
  "32" -> "61" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "40" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "62" -> "40" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "62" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "61" -> "62" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v63" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v63" -> "62" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "46" -> "62" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "37" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "64" -> "37" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v38" -> "37" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "64" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "65" -> "64" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "55" -> "64" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "65" [label="MemPartition[MemPartitionId(2)]", shape=trapezium, fillcolor="#3a1a4a"];
  "24" -> "65" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "36" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "65" -> "36" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "66" -> "36" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "66" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "56" -> "66" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "67" -> "66" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "67" [label="const 0x1ffffffec:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "35" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "65" -> "35" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "68" -> "35" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "68" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "56" -> "68" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "69" -> "68" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "69" [label="const 0x1fffffff0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "33" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "70" -> "33" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "70" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "65" -> "70" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v71" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v71" -> "70" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "37" -> "70" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "31" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "72" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v29" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "72" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "17" -> "72" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "55" -> "72" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "27" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "17" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "73" -> "27" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "73" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "56" -> "73" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "74" -> "73" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "74" [label="const 0x1ffffffe8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "25" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "17" -> "25" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v75" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v75" -> "25" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "31" -> "25" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "21" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "76" -> "21" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v22" -> "21" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "76" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "77" -> "76" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "55" -> "76" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "77" [label="MemPartition[MemPartitionId(1)]", shape=trapezium, fillcolor="#3a1a4a"];
  "9" -> "77" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "20" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "77" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "66" -> "20" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "18" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "78" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "78" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "77" -> "78" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v79" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v79" -> "78" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "21" -> "78" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "10" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "80" -> "10" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "80" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "81" -> "80" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v82" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v82" -> "80" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "83" -> "80" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "83" [label="const 0x10000:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "81" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "84" -> "81" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v85" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v85" -> "81" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "86" -> "81" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "86" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "87" -> "86" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v13" -> "86" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "87" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "84" -> "87" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "55" -> "87" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "84" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "1" -> "84" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" [label="init\nr3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="init\nr2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "88" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v89" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v89" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "90" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "90" [label="const 0xdeadbeef:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "88" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "91" -> "88" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v92" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v92" -> "88" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "93" -> "88" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "93" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "91" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "94" -> "91" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v95" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v95" -> "91" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "96" -> "91" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "96" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "94" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "97" -> "94" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v98" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v98" -> "94" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "99" -> "94" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "99" [label="init\nr11", shape=Mdiamond, fillcolor="#1a3a5c"];
  "97" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "100" -> "97" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v101" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v101" -> "97" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "102" -> "97" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "102" [label="init\nlr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "100" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
